[package]
name = "mozaic_bot_driver"
version = "0.0.0"
authors = ["Zeus WPI"]

[dependencies]
bytes = "0.4.5"
erased-serde = "0.3"
error-chain = "0.11"
futures = "0.1.18"
hex = "0.3.1"
prost = "0.3"
prost-derive = "0.3"
rand = "0.3.15"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0"
tokio-timer = "0.1.1"
slog = { version = "2.1.1", features = ["nested-values"] }
slog-json = { version = "2.2.0", features = ["nested-values"] }
tokio = "0.1.5"
tokio-core = "0.1.14"
tokio-io = "0.1.6"
tokio-process = "0.1.5"

[build-dependencies]
prost-build = "0.3"