[package]
name = "mozaic_bot_driver"
version = "0.0.0"
authors = ["Zeus WPI"]

[dependencies]
bytes = "0.4.6"
erased-serde = "0.3"
error-chain = "0.11"
futures = "0.1.18"
hex = "0.3.1"
prost = "0.3"
prost-derive = "0.3"
rand = "0.5"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0"
tokio-timer = "0.1.1"
tokio = "0.1.5"
tokio-core = "0.1.14"
tokio-io = "0.1.6"
tokio-process = "0.1.5"
tokio-codec = "0.1.0"
mozaic-derive = { path = "../mozaic-derive" }
sodiumoxide = "0.1.0"

[build-dependencies]
prost-build = "0.3"
mozaic-build = { path = "../mozaic-build" }
