[package]
name = "matchmaker"
version = "0.1.0"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rand = "0.5.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]