[package]
name = "mozaic_bot_driver"
version = "0.0.0"
authors = ["Zeus WPI"]

[dependencies]
rand = "0.3.15"
serde = "1.0.9"
serde_derive = "1.0.9"
erased-serde = "0.3"
serde_json = "1.0"
error-chain = "0.11"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.1.1"
tokio-timer = "0.1.1"
futures = "0.1.14"
bytes = "0.4.5"
slog = { version = "2.1.1", features = ["nested-values"] }
slog-json = { version = "2.2.0", features = ["nested-values"] }